--- a/web/projekt.css
+++ b/web/projekt.css
@@ -5,6 +5,7 @@ body{
     padding: 0;
     background-color: #f7f7ff;
     font-weight: 400;
+    color:#555555;
 }
 
 .heavy {
@@ -16,21 +17,23 @@ header {
     display: flex;             
     flex-direction: row;        
     justify-content:space-evenly;
-
+    overflow: hidden;
 }
 
 #header-left{
     display: flex;
     flex-direction: column;
-    padding: 1em;
     line-height: 1;
-
 }
 
-#header-right {
+#header-right{
     display: flex;
     align-items: end;
+}
 
+#orange-big img {
+    display: flex;
+    align-items: end;
 }
 
 #menu ul{
@@ -47,6 +50,11 @@ header {
 
 #job {
     font-size: 2em;
+    color: #ff9301;;
+}
+
+.titles {
+    color: #0b0b15;
 }
 /* TADY KONČÍ HEADER*/
 
@@ -58,6 +66,10 @@ header {
     align-items: flex-end;
     padding: 4vw;
     justify-content: center;
+}
+
+#job-smaller {
+    color: #ff9301;;
 }
 
 #Biography-left{
@@ -80,7 +92,7 @@ header {
 
 #Biography img {
     border-radius: 50%;
-    background-color: orange;
+    background-color: #ff9301;
     width: 100%;
     height: 100%;
 }
@@ -138,34 +150,86 @@ header {
 
 #articles-Do article div img{
     height: 50px ;
-    display: grid;
+    display: flex;
     align-self: flex-start;
 }
 
-.icon-wrapper {
-    position: relative;
-    width: 60px;
-    height: 60px;
-    margin-bottom: 1em;
-}
+/* KOD PRO KOLEČKO */ 
 
-.orange-circle {
+#orange-big::after {
+    content: "";
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 180px;
-    height: 180px;
-    background-color: orange;
+    background-color: #ff9301;
     border-radius: 50%;
-    z-index: 0;
-    transform: translate(-40%, -40%);
+    width: 1000px;
+    height: 1000px;
+    top: -25rem;
+    left: -10rem;
+    opacity: 50%;
+    z-index: -1;
 }
 
-.icon-wrapper img {
+#orange-big {
     position: relative;
     z-index: 1;
-    height: 50px;
 }
+
+.orange-small {
+    position: relative;
+    z-index: 1;
+}
+
+.orange-small::after {
+    content: "";
+    position: absolute;
+    background-color: #ff9301;
+    border-radius: 50%;
+    opacity: 50%;
+    width: 35px;
+    height: 35px;
+    top: -0.4rem;
+    left: -0.4rem;
+    z-index: -1;
+}
+
+.orange-small {
+    position: relative;
+    z-index: 1;
+}
+
+.orange-small::after {
+    content: "";
+    position: absolute;
+    background-color: #ff9301;
+    border-radius: 50%;
+    opacity: 50%;
+    width: 35px;
+    height: 35px;
+    top: -0.4rem;
+    left: -0.4rem;
+    z-index: -1;
+}
+
+.orange-mid {
+    position: relative;
+    z-index: 1;
+}
+
+.orange-mid::after {
+    content: "";
+    position: absolute;
+    background-color: #ff9301;
+    border-radius: 50%;
+    width: 180px;
+    height: 180px;
+    top: -5rem;
+    left: -4rem;
+    z-index: -1;
+}
+
+
+
+/* KONEC KODU PRO KOLEČKO */
 
 /* Awards */
 
@@ -224,48 +288,87 @@ header {
     display: flex;
     justify-content: left;
     flex-direction: column;
+    background-color: #eeeeee;
 }
 
-#Google, #Ridian, #Themes{
-    display: grid;
+#Google, #Ridian, #Themes {
+    display: flex;
     flex-direction: row;
-    justify-content: center;
-    grid-template-columns: 20% / 80%;
+    align-items: center;
     margin-bottom: 1vw;
-    border-radius: 20px;
-    border: 2px solid black;
+    border-radius: 1em;
     background-color: #f7f7ff;
+    
 }
 
-#Google .Exp-right, #Ridian .Exp-right, #Themes .Exp-right{
-    margin: 4vw;
-    grid-column: 2;
-   
+.Exp-left {
+    flex: 0 0 25%; /* Levá část 25 % */
+    text-align: start;
+    box-sizing: border-box;
+    padding-left: 2em ;
 }
 
-#Google .Exp-left, #Ridian .Exp-left, #Themes .Exp-left{
-    display: grid;
-    flex-direction: column;
-    margin: 4vw;
-    grid-column: 1;
-    justify-content: left;
+.Exp-right {
+    flex: 1; /* Pravá část zabere zbytek */
+    text-align: left;
+    padding: 1em;
+    box-sizing: border-box;
 }
 
-.Exp-left p.Full-time, .Exp-left p.Part-time {
-    display: grid;
-    align-content: start;
-    justify-content: left;
-    margin: 0;
+.Part-time, .Full-time {
+    display: flex;
+    align-items: end;
+    justify-content: center;
+    color: #eeeeee;
+    border-radius: 0.3em;
+    margin-right: 15em;
+    margin-top: 0;
+ 
+}
+
+.Part-time{
+    background-color: #555555;
+}
+.Full-time{
+    background-color: #ff9301;
 }
 
 .Exp-left p {
-    display: grid;
-    align-items: end;
-    justify-content: left;
+    margin-bottom: 0;
+}
+/* MY PORTFOLIO */
 
-    margin: 0;
+
+
+* {
+    box-sizing: border-box;
 }
-#Experience {
-    background-color: #eeeeee;
+
+#Portfolio {
+    width: 100%;
+    padding: 4vw;
 }
+
+#Port-div {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    
+}
+
+.Port-art {
+    margin: 1em;
+}
+
+.Port-art img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+#Portfolio h2{
+    display: flex;
+    justify-content: left;
+    margin: 1em;
+}
+
+
 
